--- a/templates/base.html
+++ b/templates/base.html
@@ -24,18 +24,19 @@
                         <a class="nav-link" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'about' %}">About me</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'new' %}">Create Post</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'list' %}">Post</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'about' %}">About me</a>
+                    </li>
                     {% if user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'password_change' %}">Password Change</a>
                     <form method="POST" action="{% url 'logout' %}">
                         {% csrf_token %}
-                        ######################## <input>
+                        <input type="submit" class="nav-link" value="Log Out">
                     </form>
                     {% else %}
                     <a class="nav-link" href="{% url 'login' %}">Log in</a>
