--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'about' %}">About me</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'archive' %}">Archive Post</a>
+                    </li>
                     {% if user.is_authenticated %}
                     <a class="nav-link" href="{% url 'password_change' %}">Password Change</a>
                     <form method="POST" action="{% url 'logout' %}">
@@ -39,7 +42,7 @@
                         <input type="submit" class="nav-link" value="Log Out">
                     </form>
                     {% else %}
-                    <a class="nav-link" href="{% url 'login' %}">Log in</a>
+                    <a class="v-link" href="{% url 'login' %}">Log in</a>
                     {% endif %}
                 </ul>
             </div>
