--- a/templates/base.html
+++ b/templates/base.html
@@ -32,10 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'about' %}">About me</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'archive' %}">Archive Post</a>
-                    </li>
                     {% if user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'archived' %}">Archive Post</a>
+                    <a class="nav-link" href="{% url 'password_reset' %}">Password Reset</a>
                     <a class="nav-link" href="{% url 'password_change' %}">Password Change</a>
                     <form method="POST" action="{% url 'logout' %}">
                         {% csrf_token %}
@@ -43,6 +42,7 @@
                     </form>
                     {% else %}
                     <a class="v-link" href="{% url 'login' %}">Log in</a>
+                    <a class="v-link" href="{% url 'sign_up' %}">Sign Up</a>
                     {% endif %}
                 </ul>
             </div>
