--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,5 +10,5 @@
     {{ form.as_p }}
     <input type="submit" class="btn btn-primary" value="Log in">
 </form>
-<small>Forget your password?<a href="{% url 'password_reset %}">Click here</a></small>
+<small>Forget your password?<a href="{% url 'password_reset' %}">Click here</a></small>
 {% endblock content %}
