--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -8,6 +8,6 @@
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" class="btn btn-light" value="Reset here">
+    <input type="submit" class="btn btn-primary" value="Reset here">
 </form>
 {% endblock content %}
